add: create monthly wage flow
