# src/modules/monthly_wages/http/router.ts
@@ -1,6 +1,8 @@
 import { Router } from 'express';
-import MonthlyWagesUsecase from '../usecase';
+import MonthlyWagesUsecase, { IMonthlyWagesUsecase } from '../usecase';
 import MonthlyWagesHandler, { IMonthlyWagesHandler } from './handler';
+import createHandler from 'infrastructure/web/createHandler';
+import { STATUS_CODES } from 'utils/constants';
 
 const router = Router();
 
@@ -10,16 +12,21 @@ export interface IMonthlyWagesRouter {
 }
 
 export default class MonthlyWagesRouter {
-  protected budgetsUsecase: MonthlyWagesUsecase;
+  protected budgetsUsecase: IMonthlyWagesUsecase;
   protected handler: IMonthlyWagesHandler;
 
-  constructor(BudgetsUsecase: MonthlyWagesUsecase) {
+  constructor(BudgetsUsecase: IMonthlyWagesUsecase) {
     this.budgetsUsecase = BudgetsUsecase;
     this.handler = new MonthlyWagesHandler(BudgetsUsecase);
     this.registerRouters();
   }
 
-  registerRouters(): void {}
+  registerRouters(): void {
+    router.post(
+      '/monthly-wages',
+      createHandler(this.handler.create, STATUS_CODES.CREATED)
+    );
+  }
 
   getRouter(): Router {
     return router;
